--- a/works/fragments/i-made-it-myself/index.html
+++ b/works/fragments/i-made-it-myself/index.html
@@ -3,27 +3,27 @@
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge">
 <meta name=viewport content="width=device-width,initial-scale=1">
-<title>Fml Sign - Redgum & Rust</title>
+<title>I Made It Myself - Redgum & Rust</title>
 <meta name=description content="Found object art from Tasmania.">
-<title itemprop=name>Fml Sign</title>
-<meta property="og:title" content="Fml Sign">
-<meta name=twitter:title content="Fml Sign">
-<meta itemprop=name content="Fml Sign">
+<title itemprop=name>I Made It Myself</title>
+<meta property="og:title" content="I Made It Myself">
+<meta name=twitter:title content="I Made It Myself">
+<meta itemprop=name content="I Made It Myself">
 <meta property="og:site_name" content>
 <meta name=description content="Found object art from Tasmania.">
 <meta itemprop=description content="Found object art from Tasmania.">
 <meta property="og:description" content="Found object art from Tasmania.">
 <meta name=twitter:description content="Found object art from Tasmania.">
-<base href=/works/misc/fml-sign/>
-<link rel=canonical href=http://redgumandrust.com.au/works/misc/fml-sign/ itemprop=url>
-<meta name=url content="http://redgumandrust.com.au/works/misc/fml-sign/">
-<meta property="og:url" content="http://redgumandrust.com.au/works/misc/fml-sign/">
-<meta name=twitter:url content="http://redgumandrust.com.au/works/misc/fml-sign/">
+<base href=/works/fragments/i-made-it-myself/>
+<link rel=canonical href=http://redgumandrust.com.au/works/fragments/i-made-it-myself/ itemprop=url>
+<meta name=url content="http://redgumandrust.com.au/works/fragments/i-made-it-myself/">
+<meta property="og:url" content="http://redgumandrust.com.au/works/fragments/i-made-it-myself/">
+<meta name=twitter:url content="http://redgumandrust.com.au/works/fragments/i-made-it-myself/">
 <meta name=twitter:card content="summary">
 <meta name=twitter:creator content="Tom Harris (Redgum & Rust)">
-<meta itemprop=image content="http://redgumandrust.com.au/images/works/fml-sign/IMG20180527084625_hu7fa04308fd2c8d7b4bfab034c1c0a7ce_125066_800x418_fill_box_center.png">
-<meta property="og:image" content="http://redgumandrust.com.au/images/works/fml-sign/IMG20180527084625_hu7fa04308fd2c8d7b4bfab034c1c0a7ce_125066_800x418_fill_box_center.png">
-<meta name=twitter:image content="http://redgumandrust.com.au/images/works/fml-sign/IMG20180527084625_hu7fa04308fd2c8d7b4bfab034c1c0a7ce_125066_800x418_fill_box_center.png">
+<meta itemprop=image content="http://redgumandrust.com.au/images/works/i-made-it-myself/IMG20211113111453_hu91c877901eff0d1e7c3042aa567904db_84842_800x418_fill_box_center.png">
+<meta property="og:image" content="http://redgumandrust.com.au/images/works/i-made-it-myself/IMG20211113111453_hu91c877901eff0d1e7c3042aa567904db_84842_800x418_fill_box_center.png">
+<meta name=twitter:image content="http://redgumandrust.com.au/images/works/i-made-it-myself/IMG20211113111453_hu91c877901eff0d1e7c3042aa567904db_84842_800x418_fill_box_center.png">
 <meta property="og:locale" content="en">
 <link rel=icon type=image/png href=http://redgumandrust.com.au/favicon.ico>
 <link rel=stylesheet href=http://redgumandrust.com.au/css/main.css>
@@ -48,7 +48,11 @@
 /
 <a href=/figures/>figures</a>
 /
+<a href=/fragments/>fragments</a>
+/
 <a href=/misc/>misc</a>
+/
+<a href=/thoughts/>thoughts</a>
 /
 <a href=/about/>about</a>
 </div>
@@ -69,27 +73,27 @@
 </div>
 </nav>
 <section class=section>
-<div class=slide info=true path=/works/misc/fml-sign/>
+<div class=slide info=true path=/works/fragments/i-made-it-myself/>
 <div>
 <div class=slide-imgs>
 <div>
 <div class="center column slide-meta-title">
-<a class=a-clean href=/works/misc/fml-sign/>Fml Sign</a>
+<a class=a-clean href=/works/fragments/i-made-it-myself/>I Made It Myself</a>
 </div>
 <div>
 <div>
-<img src=/images/works/fml-sign/IMG20180527084625_hu7fa04308fd2c8d7b4bfab034c1c0a7ce_125066_3000x0_resize_q75_box.jpg loading=lazy width=3000 height=2250>
+<img src=/images/works/i-made-it-myself/IMG20211113111453_hu91c877901eff0d1e7c3042aa567904db_84842_3000x0_resize_q75_box.jpg loading=lazy width=3000 height=4000>
 </div>
 </div>
 <div class=center>
 <div class="slide-meta columns is-mobile">
 <div class="center column slide-meta-el">
 <div class=slide-tags>
-<a class=grey href=http://redgumandrust.com.au/tags/misc>#misc</a>
+<a class=grey href=http://redgumandrust.com.au/tags/fragments>#fragments</a>
 </div>
 </div>
 <div class="center column slide-meta-el grey">
-<p>May 26, 2018</p>
+<p>November 13, 2021</p>
 </div>
 </div>
 </div>
@@ -102,21 +106,22 @@
 <details>
 <summary>Exif</summary>
 <ul>
-<li>Date: May 26, 2018</li>
+<li>Date: November 13, 2021</li>
 <li>Aperture: 2.27</li>
-<li>Exposure Time: 1/100</li>
+<li>Exposure Time: 1/33</li>
 <li>F Number: 2.2</li>
 <li>Focal Length: 3.46</li>
-<li>ISO Speed Ratings: 50</li>
+<li>ISO Speed Ratings: 175</li>
 <li>Model: CPH1701</li>
 </ul>
 </details>
 </div>
-<p><strong>FML Sign</strong> was a sign for the shared studio space &ldquo;Footscray Maker Lab&rdquo; or <a href=https://footscraymakerlab.com/ target=_blank rel=noopener>FML</a> in inner Melbourne. Situated in a semi-derelict warehouse that the owners' only leased to us as I suspect no-one else would rent it. It wasanoted rave venue in the 90s, and there was plenty of graffiti in the place. It was an interesting experience at a difficult personal time, and certainly gave me something else to think about.</p>
-<p>The sign was intended to go on the roof on a wire fence that had once contained the building&rsquo;s electrical supply, backlit with red diffused light (shades of Dark Mofo?), but it ended up being fixed to a wall in the yard. I don&rsquo;t have a good photo of it now. I still think it would look fantastic backlit.</p>
-<p>I built the frame freehand with strap iron, and then infilled with the most lightweight bits of steel that I could find. I think I got a good selection of shapes. I used fluxcore wire in the MIG, as it makes a good weld even through paint or plating.</p>
-<p>Looks like I sharpened this photo up a bit, the place rarely looked that clean!</p>
-<p><img src=/images/works/fml-sign/IMG20180527084616-EFFECTS-edited.jpg alt="Overall shot edited"></p>
+<p>I made <strong>I Made It Myself</strong> for a recycled art show held in Kingston in 2022. The theme was &ldquo;Messages of Hope&rdquo; and the direction was to make a mailbox. I was rather pleased that I got first prize, here&rsquo;s me & the Mayor Paula Wreidt at the opening.</p>
+<p><img src=/images/works/i-made-it-myself/IMG20211112182946.jpg alt=mayor></p>
+<h2 id=materials>Materials</h2>
+<p>The box is made of scrap clear acrylic glued together. I have yet to find a good glue for acrylic, even bathroom silicone (the sort that smells like ants) doesn&rsquo;t seem to hold very well. I probably should have sanded it first. I&rsquo;ve fixed it a few times.
+Onto this I glued lots of fragments from my bits box, including fragments of a barbie doll, like the arms and the bum. The kids liked that bit and none of them found it creepy. On top there&rsquo;s a little man putting the finishing touches to his creation. He&rsquo;s quite proud that he built it himself, out of junk.
+The lightshow inside is made from a string of LEDs from Aliexpress that I bought to make a desklamp, unfortunately they were far too dim and they are incapable of producing a white light that does not give a headache. However they are perfect for a gentle lightshow if the colour is dialed down a bit. I used a cheap little microcontroller to drive the LED string, its got about enough brains to run a toaster so it can do a dozen LEDs no problem.</p>
 </div>
 </div>
 </div>
