Added Sound Wave & Iron Mirror.

--- a/works/fragments/iron-mirror-1/index.html
+++ b/works/fragments/iron-mirror-1/index.html
@@ -14,16 +14,16 @@
 <meta itemprop=description content="Found object art from Tasmania.">
 <meta property="og:description" content="Found object art from Tasmania.">
 <meta name=twitter:description content="Found object art from Tasmania.">
-<base href=/works/fragments/iron-mirror-proto/>
-<link rel=canonical href=http://redgumandrust.com.au/works/fragments/iron-mirror-proto/ itemprop=url>
-<meta name=url content="http://redgumandrust.com.au/works/fragments/iron-mirror-proto/">
-<meta property="og:url" content="http://redgumandrust.com.au/works/fragments/iron-mirror-proto/">
-<meta name=twitter:url content="http://redgumandrust.com.au/works/fragments/iron-mirror-proto/">
+<base href=/works/fragments/iron-mirror-1/>
+<link rel=canonical href=http://redgumandrust.com.au/works/fragments/iron-mirror-1/ itemprop=url>
+<meta name=url content="http://redgumandrust.com.au/works/fragments/iron-mirror-1/">
+<meta property="og:url" content="http://redgumandrust.com.au/works/fragments/iron-mirror-1/">
+<meta name=twitter:url content="http://redgumandrust.com.au/works/fragments/iron-mirror-1/">
 <meta name=twitter:card content="summary">
 <meta name=twitter:creator content="Tom Harris (Redgum & Rust)">
-<meta itemprop=image content="http://redgumandrust.com.au/images/works/iron-mirror-proto/20230729_144315.cropped_hu50af77922f1faef063b86473df838615_155444_800x418_fill_box_center.png">
-<meta property="og:image" content="http://redgumandrust.com.au/images/works/iron-mirror-proto/20230729_144315.cropped_hu50af77922f1faef063b86473df838615_155444_800x418_fill_box_center.png">
-<meta name=twitter:image content="http://redgumandrust.com.au/images/works/iron-mirror-proto/20230729_144315.cropped_hu50af77922f1faef063b86473df838615_155444_800x418_fill_box_center.png">
+<meta itemprop=image content="http://redgumandrust.com.au/images/works/iron-mirror-1/20230729_144315.cropped_hu50af77922f1faef063b86473df838615_155444_800x418_fill_box_center.png">
+<meta property="og:image" content="http://redgumandrust.com.au/images/works/iron-mirror-1/20230729_144315.cropped_hu50af77922f1faef063b86473df838615_155444_800x418_fill_box_center.png">
+<meta name=twitter:image content="http://redgumandrust.com.au/images/works/iron-mirror-1/20230729_144315.cropped_hu50af77922f1faef063b86473df838615_155444_800x418_fill_box_center.png">
 <meta property="og:locale" content="en">
 <link rel=icon type=image/png href=http://redgumandrust.com.au/favicon.ico>
 <link rel=stylesheet href=http://redgumandrust.com.au/css/main.css>
@@ -52,8 +52,6 @@
 /
 <a href=/misc/>misc</a>
 /
-<a href=/thoughts/>thoughts</a>
-/
 <a href=/about/>about</a>
 </div>
 </div>
@@ -73,16 +71,16 @@
 </div>
 </nav>
 <section class=section>
-<div class=slide info=true path=/works/fragments/iron-mirror-proto/>
+<div class=slide info=true path=/works/fragments/iron-mirror-1/>
 <div>
 <div class=slide-imgs>
 <div>
 <div class="center column slide-meta-title">
-<a class=a-clean href=/works/fragments/iron-mirror-proto/>Iron Mirror 1</a>
+<a class=a-clean href=/works/fragments/iron-mirror-1/>Iron Mirror 1</a>
 </div>
 <div>
 <div>
-<img src=/images/works/iron-mirror-proto/20230729_144315.cropped_hu50af77922f1faef063b86473df838615_155444_3000x0_resize_q75_box.jpg loading=lazy width=3000 height=5721>
+<img src=/images/works/iron-mirror-1/20230729_144315.cropped_hu50af77922f1faef063b86473df838615_155444_3000x0_resize_q75_box.jpg loading=lazy width=3000 height=5721>
 </div>
 </div>
 <div class=center>
@@ -103,7 +101,7 @@
 <h2 id=i-nearly-make-a-table>I Nearly Make a Table&mldr;</h2>
 <p>I initially made a circular frame for sitting a piece of tempered glass into. I made the frame from strip steel on a machine called a Ring Roller, that passes the work over two undriven rollers in a row with a third driven roller pressing down on the work, so by repeated passes it forms a perfect circle (apart from the ends, which remain straight as they can&rsquo;t go through the machine). Then you cut the unbent ends off and weld it together to form a ring. The machine was very heavily built and hard work as it was completely manual. I have since found that I can make a perfectly acceptable ring by just tying two round fenceposts together, and passing the steel over it whilst an assistant hits the steel over the gap in the middle with a sledgehammer. It&rsquo;s a bit tricky to keep things straight so that the ring isn&rsquo;t twisted, but not too difficult, and the ring can always be twisted or bashed into shape.</p>
 <p>Then I infilled the ring with lots of iron scrap bolts and engine parts. I first burned the grease and plating off them in a homemade forge powered with a leafblower, and then cleaned them up in a cement mixer with a slurry of beachsand. One side of the infill I kept very flat as it was going to have the glass resting on it, whilst I welded the bits on the other side. I used fluxcore wire in the MIG welder. It&rsquo;s easier than using sticks where you need to strike the arc before welding, which usually moves little bits like bolts etc. which are not clamped together. Also fluxcore gives better welds on dirty metal, as after cleaning the bolts are bright steel which goes rusty very quickly.</p>
-<p><img src=/images/works/iron-mirror-proto/20230729_144419.rotated.jpg alt="Infill detail"></p>
+<p><img src=/images/works/iron-mirror-1/20230729_144419.rotated.jpg alt="Infill detail"></p>
 <p>I didn&rsquo;t really do a design, just filled it with whatever I had to hand, as I was just trying out how it looked. I found that nuts & bolts can easily be formed into all sorts of designs, suggesting stars or flowers, and were easy to bend as their soak in the forge had removed the hardness / toughness of the steel. Other design elements can be realised with odd bits of scrap, but I mostly had nuts & bolts.</p>
 <p>But then I wasn&rsquo;t happy with the look of the design, so I never built the table, just kept the top lying around.</p>
 <p>Years later I was doing a local art event &ldquo;Art in the Hills&rdquo; which is a huge open studios weekend for lots of artists around the Dandenong Ranges near Melbourne. As I was new to the event the organisers assigned me a &ldquo;buddy&rdquo; <a href=https://jessiejournoudryan.com/ target=_blank rel=noopener>Jessie Jornaud-Ryan</a>, who makes sculptural mosaic pieces from broken crockery that are really worth a look, particularly birds, I have one of her wrens in the kitchen. She did a walkround of my workspace, and I showed her the tabletop, and asked for suggestions, she suggested mounting it on a pedestal.</p>
@@ -112,7 +110,9 @@
 <p>I happened to have made a large U shaped mount for my vortex cannon (a machine that launches smoke rings when whacked with a largemallet) which I made after observing ihe trials of savant <a href=https://www.ibys.org/index.php/2016/03/08/second-prototype-of-toroidal-ring-vortex-machine-undergoing-trials/ target=_blank rel=noopener>Mark Thomson&rsquo;s giant cannon</a>, allegedly a Nazi secret weapon, cunningly disguised as a tin water tank. I had junked the cannon since I had nowhere to store it, but I still had the mount, consisting of a large U on a central axis, that could swivel horizontally and vertically. It was easy to fit the round panel in the mount, and I knew that I had something.</p>
 <h2 id=the-mirror>The Mirror</h2>
 <p>It is extraordinarily satisfying to look at (or <em>through</em> or <em>into</em>?) the Mirror, and to turn it to different positions. I certainly enjoy having it around, and the visitors on the weekend of my open studio were intrigued with it. I still have it, and visitors still stop to admire it. Of particular interest is the two sides to the mirror, with the design mirrored of course, but one clear of welds, the other chockers with spotwelds. Of course the mirror world is only an <em>approximate</em> copy of our world&mldr;</p>
-<p>I really should make the final version of this piece, with a properly engineered mount with some sort of bearing rather than unlubricated metal on metal, and a nice design for the Mirror.</p>
+<p><img src=/images/works/iron-mirror-1/20201129_172003.jpg alt="Me with Mirror"></p>
+<p>Here&rsquo;s me with the mirror in actuality. Tle local balckbirds like to perch on it and the spiders like it as a base for webs so it does need a bit of a clean sometimes. I wonder if there is a metal treatment that includes wildlife repellant?</p>
+<p>I really should make the final version of this piece, with a properly engineered mount with some sort of bearing rather than unlubricated metal on metal, and a nice design for the Mirror. I&rsquo;d like to up the diameter to a metre to make give it more presence, and about 1.8m high.</p>
 </div>
 </div>
 </div>
