--- a/works/fragments/fml-sign/index.html
+++ b/works/fragments/fml-sign/index.html
@@ -52,8 +52,6 @@
 /
 <a href=/misc/>misc</a>
 /
-<a href=/thoughts/>thoughts</a>
-/
 <a href=/about/>about</a>
 </div>
 </div>
@@ -118,7 +116,7 @@
 </div>
 <p><strong>FML Sign</strong> was a sign for the shared studio space &ldquo;Footscray Maker Lab&rdquo; or <a href=https://footscraymakerlab.com/ target=_blank rel=noopener>FML</a> in inner Melbourne. Situated in a semi-derelict warehouse that the owners' only leased to us as I suspect no-one else would rent it. It was a noted rave venue in the 90s, and there was plenty of graffiti in the place, but even the ravers thought it too shabby and moved on. It was an interesting experience at a difficult personal time, and certainly gave me something else to think about.</p>
 <p>The sign was intended to go on the roof on a wire fence that had once contained the building&rsquo;s electrical supply, backlit with red diffused light (shades of Dark Mofo?), but it ended up being fixed to a wall in the yard. I don&rsquo;t have a good photo of it now. I still think it would look fantastic backlit.</p>
-<p>I built the frame freehand with strap iron, and then infilled with the most lightweight bits of steel that I could find. I think I got a good selection of shapes. I used fluxcore wire in the MIG, as it makes a good weld even through paint or plating. I know that welding through plating is a bad idea as the fumes can make you sick as a dog so please don&rsquo;t tell me.</p>
+<p>I built the frame freehand with strap iron, and then infilled with the most lightweight bits of steel that I could find. I think I got a good selection of shapes. I used fluxcore wire in the MIG, as it makes a good weld even through paint or plating. I <strong>do</strong>know that welding through plating is a bad idea as the fumes can make you sick as a dog so please don&rsquo;t tell me.</p>
 <p>Looks like I sharpened this photo up a bit, the place rarely looked that clean!</p>
 <p><img src=/images/works/fml-sign/IMG20180527084616-EFFECTS-edited.jpg alt="Overall shot edited"></p>
 </div>
