Seems to lose last commit?? Anyway there are lots of updates.

--- a/fragments/index.html
+++ b/fragments/index.html
@@ -33,14 +33,16 @@
 <nav class=navbar role=navigation aria-label="main navigation">
 <div class=navbar-start>
 <div class=logo>
-<a href=/works/>
+<a href=/favourites/>
 <img class=logo src=http://redgumandrust.com.au/logo.png>
 </a>
 </div>
 </div>
 <div class=navbar-middle>
-<a class=a-clean href=/works/><p class=welcome-title>Redgum & Rust</p></a>
+<a class=a-clean href=/favourites/><p class=welcome-title>Redgum & Rust</p></a>
 <div class=menu>
+<a href=/favourites/>favourites</a>
+/
 <a href=/works/>works</a>
 /
 <a href=/figures/>figures</a>
@@ -126,22 +128,24 @@ by a particular <em>fragment</em>, &ldquo;Oh that&rsquo;s a <strong>thing</stron
 <div class="columns work-width is-mobile is-multiline">
 <div class=column>
 <div class=center>
-<div class="image-box alittle">
+<div class=image-box>
 <img src=/images/works/i-made-it-myself/IMG20211113111453_hu91c877901eff0d1e7c3042aa567904db_84842_1000x0_resize_q75_box.jpg loading=lazy width=1000 height=1333 onclick=openSlider(),currentSlide(1)>
 </div>
 </div>
 <div class=center>
-<div class="image-box alittle">
+<div class=image-box>
+<img src=/images/works/fml-sign/IMG20180527084625_hu7fa04308fd2c8d7b4bfab034c1c0a7ce_125066_1000x0_resize_q75_box.jpg loading=lazy width=1000 height=750 onclick=openSlider(),currentSlide(3)>
+</div>
+</div>
+</div>
+<div class=column>
+<div class=center>
+<div class=image-box>
 <img src=/images/works/iron-mirror-1/20230729_144315.cropped_hud22912f4951dfacb6fb5afe9d2ce3d73_153587_1000x0_resize_q75_box.jpg loading=lazy width=1000 height=1907 onclick=openSlider(),currentSlide(2)>
 </div>
 </div>
 <div class=center>
-<div class="image-box alittle">
-<img src=/images/works/fml-sign/IMG20180527084625_hu7fa04308fd2c8d7b4bfab034c1c0a7ce_125066_1000x0_resize_q75_box.jpg loading=lazy width=1000 height=750 onclick=openSlider(),currentSlide(3)>
-</div>
-</div>
-<div class=center>
-<div class="image-box alittle">
+<div class=image-box>
 <img src=/images/works/sound-wave/t1_hub92bd0978e923092b8c54d7dc4ae533b_533954_1000x0_resize_box_3.png loading=lazy width=1000 height=1269 onclick=openSlider(),currentSlide(4)>
 </div>
 </div>
@@ -192,7 +196,7 @@ by a particular <em>fragment</em>, &ldquo;Oh that&rsquo;s a <strong>thing</stron
 </ul>
 </details>
 </div>
-<p>I made <strong>I Made It Myself</strong> for a recycled art show held in Kingston in 2022. The theme was &ldquo;Messages of Hope&rdquo; and the direction was to make a mailbox. I was rather pleased that I got first prize, here&rsquo;s me & the Mayor Paula Wreidt at the opening.</p>
+<p>I made <strong>I Made It Myself</strong> for a recycled art show held in Kingston in 2022. The theme was &ldquo;Messages of Hope&rdquo; and the direction was to make a mailbox. I was rather pleased that I won the open award, here&rsquo;s me & the Mayor Paula Wreidt at the opening.</p>
 <p><img src=/images/works/i-made-it-myself/IMG20211112182946.jpg alt=mayor></p>
 <h2 id=materials>Materials</h2>
 <p>The box is made of scrap clear acrylic glued together. I have yet to find a good glue for acrylic, even bathroom silicone (the sort that smells like ants) doesn&rsquo;t seem to hold very well. I probably should have sanded it first. I&rsquo;ve fixed it a few times.
@@ -320,6 +324,7 @@ The lightshow inside is made from a string of LEDs from Aliexpress that I bought
 <div class="center column slide-meta-el">
 <div class=slide-tags>
 <a class=grey href=http://redgumandrust.com.au/tags/fragments>#fragments</a>
+<a class=grey href=http://redgumandrust.com.au/tags/favourites>#favourites</a>
 </div>
 </div>
 </div>
@@ -329,14 +334,14 @@ The lightshow inside is made from a string of LEDs from Aliexpress that I bought
 <div class=center>
 <div class=slide-info>
 <div class="content margin-bottom-50">
-<p><strong>Sound Wave</strong> was easily my biggest and heaviest sculpture, 2.4m high and 250Kg! Like most of my ideas the actual result differed from the concept.</p>
+<p><strong>Sound Wave</strong> was easily my biggest and heaviest sculpture, 2.4m high and over 250Kg as that&rsquo;s where my scale stops! Like most of my ideas the actual result differed from the concept.</p>
 <p>My concept was inspired by a fern shoot bursting through the ground. It always amazes me how something as soft as a fern shoot can break through hard earth and push through layers of packed bark and forest trash considering that it is about the strength of an asparagas stalk. In New Zealand Moari culture such a shoot or <em>koru</em> is a central symbol of the strength of new life, and stylised forms are seen everywhere in NZ. Of course plant shoots are a commonly shaped like spirals, and people just <em>like</em> spirals. They look cool.</p>
 <p>Somehow inspiration struck one day (how I wish you could bottle it) and I had a vision of Sound Wave bursting though a brickpaved patch of ground. I immediately did a sketch like a good boy. Unfortunately I left the sketch outside in the rain on my old workspace and that was the end of it. I really should get better at keeping records.</p>
 <h2 id=materials>Materials</h2>
-<p>SW is made exclusively of scrap iron and steel. This was a mistake, the frame should have been made of new steel to give the finished piece structural strength.</p>
-<p>All parts were first burned in a forge to get rid of grease and plating, and then tumbled in a cement mixer with a slurry of sand and crushed rock. This was a huge undertaking in itself, as I could only process about 15Kg at a time. The noise made by a cement mixer with rocks and old iron in it has to be heard to be believed! Some parts what couldn&rsquo;t fit in the cement mixer were cleaned with a 1950&rsquo;s era pedestal grinder that I fitted with a wire brush.</p>
+<p>Sound Wave is made exclusively of scrap iron and steel. This was a mistake, the frame should have been made of new steel to give the finished piece structural strength. I&rsquo;ve had to perform repairs over the years.</p>
+<p>All parts were first burned in a furnace to get rid of grease and plating, and then tumbled in a cement mixer with a slurry of sand and crushed rock. This was a huge undertaking in itself, as I could only process about 15Kg at a time. The noise made by a cement mixer with rocks and old iron in it has to be heard to be believed! Some parts what couldn&rsquo;t fit in the cement mixer were cleaned with a 1950&rsquo;s era pedestal grinder that I fitted with a wire brush.</p>
 <h2 id=construction>Construction</h2>
-<p>I had to make a special bench to build SW, it was a single sheet of plywood 2.4m by 1.2m. I still have this, I made it with removable legs, now it&rsquo;s on castors so I can move it out of the shed for dirty work. The bench also needed an outrigger to do the curly bit on the top.</p>
+<p>I had to make a special bench to build Sound Wave, it was a single sheet of plywood 2.4m by 1.2m. I still have this, I made it with removable legs, now it&rsquo;s on castors so I can move it out of the shed for dirty work. The bench also needed an outrigger to do the curly bit on the top.</p>
 <p><img src=/images/works/sound-wave/DSC_0999.JPG alt=Building></p>
 <p>I transferred my design from a sketchbook by the old method of drawing squares over it, and then magnifying each and drawing on to my bench. I built the sides on the bench, then put them side by side and started welding the rest of it, using odd bits of wood to make sure the design was flat between the sides. This was difficult enough, I have no idea how people freeform sculptures with no armature. I suspect they use polystyrene or wood and burn it out.</p>
 <p>I don&rsquo;t remember how long it took but it was months of work.</p>
@@ -344,12 +349,12 @@ The lightshow inside is made from a string of LEDs from Aliexpress that I bought
 <p>Then I had the problem of what to do with it. It featured in a few local galleries, and I took it to Maker Fayre in Adelaide, I got lots of comments along the drive from Melbourne. It fitted in the ute as I had designed the footprint so that it just fitted between the wheelwells. The SA Makers (organisers of the Fayre) must have liked it, they featured in their final report (source of title image) and they gave me a grant to attend next year.</p>
 <h2 id=boort-2015>Boort 2015</h2>
 <p>I did enter it in a country show in Boort in Victoria in 2015 or so, it actually won second prize, which was impressive. Boort somehow has a bit of a tradition of junk sculpture, I helped them make an iron fish and a cormorant that now are displayed by the Boort Lake.</p>
-<p><img src=/images/works/sound-wave/DSC_0012.JPG alt=Building></p>
+<p><img src=/images/works/sound-wave/DSC_0012.JPG alt=Moving></p>
 <p>Unloading was a breeze, the local tyre shop owner used her heavy 4WD forklift to move it across site.</p>
 <h2 id=stringybark-festival>Stringybark Festival</h2>
-<p>When I lived in Victoria my makerspace had a big presence at a local festival organised by the council, unusually for such affairs it was quite good with lots of good stuff going on. As part of the makerspace display I took along SW. The access was so tight we had to lift it onto the forklift. That look a <strong>lot</strong> of hands!</p>
-<p>Still it was worth it the kids loved it!</p>
-<p><img src=/images/works/sound-wave/DSC_0223.JPG alt="SW at Stringybark"></p>
+<p>When I lived in Victoria my makerspace had a big presence at a local festival organised by the council, unusually for such affairs it was quite good with lots of good stuff going on. As part of the makerspace display I took along Sound Wave. The access was so tight we had to lift it onto the forklift by hand. That look a <strong>lot</strong> of hands!</p>
+<p>Still it was worth it; the kids loved it!</p>
+<p><img src=/images/works/sound-wave/DSC_0223.JPG alt="Sound Wave at Stringybark"></p>
 <h2 id=and-now>And now&mldr;</h2>
 <p>It did live in the yard at my shared studio space for quite a while, I had a hoist there so I could get it onto the ute easily, as long as they had a forklift at the other end to unload it. Now I have it on longterm loan to my ex-boss on his farm in rural Silvan where he also runs his disability engineering business.</p>
 <p><img src=/images/works/sound-wave/20220831_073804.cropped.jpg alt="Location in Silvan"></p>
