--- a/works/fragments/i-made-it-myself/index.html
+++ b/works/fragments/i-made-it-myself/index.html
@@ -36,14 +36,16 @@
 <nav class=navbar role=navigation aria-label="main navigation">
 <div class=navbar-start>
 <div class=logo>
-<a href=/works/>
+<a href=/favourites/>
 <img class=logo src=http://redgumandrust.com.au/logo.png>
 </a>
 </div>
 </div>
 <div class=navbar-middle>
-<a class=a-clean href=/works/><p class=welcome-title>Redgum & Rust</p></a>
+<a class=a-clean href=/favourites/><p class=welcome-title>Redgum & Rust</p></a>
 <div class=menu>
+<a href=/favourites/>favourites</a>
+/
 <a href=/works/>works</a>
 /
 <a href=/figures/>figures</a>
@@ -119,7 +121,7 @@
 </ul>
 </details>
 </div>
-<p>I made <strong>I Made It Myself</strong> for a recycled art show held in Kingston in 2022. The theme was &ldquo;Messages of Hope&rdquo; and the direction was to make a mailbox. I was rather pleased that I got first prize, here&rsquo;s me & the Mayor Paula Wreidt at the opening.</p>
+<p>I made <strong>I Made It Myself</strong> for a recycled art show held in Kingston in 2022. The theme was &ldquo;Messages of Hope&rdquo; and the direction was to make a mailbox. I was rather pleased that I won the open award, here&rsquo;s me & the Mayor Paula Wreidt at the opening.</p>
 <p><img src=/images/works/i-made-it-myself/IMG20211112182946.jpg alt=mayor></p>
 <h2 id=materials>Materials</h2>
 <p>The box is made of scrap clear acrylic glued together. I have yet to find a good glue for acrylic, even bathroom silicone (the sort that smells like ants) doesn&rsquo;t seem to hold very well. I probably should have sanded it first. I&rsquo;ve fixed it a few times.
