--- a/works/fragments/i-made-it-myself/index.html
+++ b/works/fragments/i-made-it-myself/index.html
@@ -121,12 +121,37 @@
 </ul>
 </details>
 </div>
-<p>I made <strong>I Made It Myself</strong> for a recycled art show held in Kingston in 2022. The theme was &ldquo;Messages of Hope&rdquo; and the direction was to make a mailbox. I was rather pleased that I won the open award, here&rsquo;s me & the Mayor Paula Wreidt at the opening.</p>
+<h3 id=details>Details</h3>
+<p>Size: 30cm wide x 40cm high wall hanging; 30cmm deep.<br>
+Materials: Scrap acrylic, domestic & industrial fragments, silicone bathroom caulk. Figure is car battery terminal cleaner, springs, bike brake blocks, scraps.<br>
+Date: 2021.<br>
+Note: requires mains power for lights.</p>
+<h2 id=salvaged-art-exhibition-kingston-2021>Salvaged Art Exhibition Kingston 2021</h2>
+<p>I made <strong>I Made It Myself</strong> for a recycled art show held in Kingston in 2021. The theme was &ldquo;Messages of Hope&rdquo; and the direction was to make a mailbox.</p>
+<p>Here&rsquo;s the artist&rsquo;s description I wrote:</p>
+<pre><code>The happy fellow putting the finishing touches to his mailbox has had enough of doom and 
+gloom, assembling his mailbox from materials at hand, the castoffs of our mad throwaway 
+society: parts of smashed appliances, last year’s must-have techno-toys, unknown 
+fragments from a drawer, the detritus of shed and garage. Finding some broken Christmas
+lights, he's illuminated his mailbox hoping to attract some gentle moth-like Hopeful 
+Messages.
+
+He's quite proud that all parts are reused, saved from a one-way trip to the tip, reducing 
+the impacts of fossil fuels, before the parts resurface in the coming centuries as 
+microplastics &amp; pollutants.
+</code></pre>
+<p>I was rather pleased that I won the open award, here&rsquo;s me & the Mayor Paula Wreidt at the opening.</p>
 <p><img src=/images/works/i-made-it-myself/IMG20211112182946.jpg alt=mayor></p>
 <h2 id=materials>Materials</h2>
 <p>The box is made of scrap clear acrylic glued together. I have yet to find a good glue for acrylic, even bathroom silicone (the sort that smells like ants) doesn&rsquo;t seem to hold very well. I probably should have sanded it first. I&rsquo;ve fixed it a few times.
-Onto this I glued lots of fragments from my bits box, including fragments of a barbie doll, like the arms and the bum. The kids liked that bit and none of them found it creepy. On top there&rsquo;s a little man putting the finishing touches to his creation. He&rsquo;s quite proud that he built it himself, out of junk.
-The lightshow inside is made from a string of LEDs from Aliexpress that I bought to make a desklamp, unfortunately they were far too dim and they are incapable of producing a white light that does not give a headache. However they are perfect for a gentle lightshow if the colour is dialed down a bit. I used a cheap little microcontroller to drive the LED string, its got about enough brains to run a toaster so it can do a dozen LEDs no problem.</p>
+Onto this I glued lots of fragments from my bits box, including fragments of a barbie doll, like the arms and the bum. On top there&rsquo;s a little man putting the finishing touches to his creation. He&rsquo;s quite proud that he built it himself, out of junk.</p>
+<p>The lightshow inside is made from a string of LEDs from Aliexpress that I bought to make a desklamp, unfortunately they were far too dim and were incapable of producing a white light that does not give a headache. However they are perfect for a gentle lightshow if the colour is dialed down a bit. I used a cheap little microcontroller to drive the LED string, its got about enough brains to run a toaster so it can do a dozen LEDs no problem.</p>
+<h2 id=reception>Reception</h2>
+<p>I like going to the openings, I like to loiter and see how people react to my creations. As usual people had lots of fun recognising things reused as fragments &ldquo;Oh that&rsquo;s a &mldr;.&rdquo;. Kids especially like the idea of sticking lots of things together. One mother did accuse me of being a bit creepy with the use of doll parts, but I don&rsquo;t think her opinion was shared by her daughter who ran off to show her friend the doll&rsquo;s bum stuck to the side, with lots of giggles.</p>
+<h2 id=video-walkaround>Video Walkaround</h2>
+<div style=position:relative;padding-bottom:56.25%;height:0;overflow:hidden>
+<iframe src=https://www.youtube.com/embed/pU7mNT8J7n4 style=position:absolute;top:0;left:0;width:100%;height:100%;border:0 allowfullscreen title="YouTube Video"></iframe>
+</div>
 </div>
 </div>
 </div>
